[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "douceville_frontend"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Yann de Thé", email = "yann@gmail.com" },
]
dependencies = [
    "hypercorn>=0.17.3",
    "pydantic-settings>=2.7.0",
    "reflex>=0.6.7",
    "supabase>=2.10.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/ydethe/douceville_frontend/-/issues"
Homepage = "https://github.com/ydethe/douceville_frontend"
Source = "https://github.com/ydethe/douceville_frontend"

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ['py38']

[tool.uv]
resolution = "highest"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[dependency-groups]
dev = [
    "black==22.3.0",
    "ipython>=8.30.0",
    "pre-commit>=4.0.1",
]
doc = [
    "pdoc3>=0.11.3",
    "pylint>=3.3.2",
]
test = [
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-instafail>=0.5.0",
    "pytest-mock>=3.14.0",
    "pytest-picked>=0.5.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
]

[tool.pdm.scripts]
test.shell = """\
    mkdir -p build/htmldoc/tests
    pytest --html=build/htmldoc/tests/report.html --self-contained-html --junitxml=build/junit.xml --cov-config=.coveragerc --cov douceville_frontend tests --doctest-modules douceville_frontend
    coverage html -d build/htmldoc/coverage
"""
doc.shell = """\
    mkdir -p build/htmldoc/douceville_frontend
    pdoc --html --force --config latex_math=True -o build/htmldoc douceville_frontend
    pyreverse -s0 douceville_frontend -k --colorized -p douceville_frontend -m no -d build/htmldoc
"""
